docs: update and enhance documentation site
- Added favicon and Open Graph support with new route handlers.
- Improved layout configuration and global styling.
- Updated core API documentation and added new examples.
- Refined messaging-related documentation structure and content.
- Renamed and reorganized documentation files for clarity.
- Updated README with new API documentation link.
- Adjusted Tailwind CSS configuration and Turbo configuration.

--- a/apps/docs/content/docs/messaging/buttons/index.mdx
+++ b/apps/docs/content/docs/messaging/buttons/index.mdx
@@ -1,5 +1,6 @@
 ---
-title: Button
+title: Buttons
+description: Learn how to add URL, Postback, and Call buttons to your Messenger bot.
 ---
 
 import { Card, Cards } from 'fumadocs-ui/components/card';
@@ -12,17 +13,17 @@ This section covers the different types of buttons you can use in your bot messa
 
 <Cards>
     <Card
-        href="/button/url-button"
+        href="/messaging/buttons/url-button"
         title="URL Button"
         description="Creates a button that opens a web page when clicked."
     />
     <Card
-        href="/button/postback-button"
+        href="/messaging/buttons/postback-button"
         title="Postback Button"
         description="Triggers an event to the server when clicked."
     />
     <Card
-        href="/button/call-button"
+        href="/messaging/buttons/call-button"
         title="Call Button"
         description="Initiates a phone call when clicked."
     />
