--- a/apps/docs/content/docs/messaging/templates/index.mdx
+++ b/apps/docs/content/docs/messaging/templates/index.mdx
@@ -1,5 +1,6 @@
 ---
-title: Overview
+title: Message Templates
+description: Explore Button, Generic, Media, and Receipt Templates for Messenger with @pyyupsk/messenger-webhooks.
 ---
 
 import { Card, Cards } from 'fumadocs-ui/components/card';
@@ -8,27 +9,22 @@ The `@pyyupsk/messenger-webhooks` library provides several components to help yo
 
 <Cards>
     <Card
-        href="/messages/quick-replies"
-        title="Quick Replies"
-        description="Explore how to use Quick Replies to improve user interactions."
-    />
-    <Card
-        href="/messages/button-template"
+        href="/messaging/templates/button-template"
         title="Button Template"
         description="Discover how to use Button Templates to enhance your messages."
     />
     <Card
-        href="/messages/generic-template"
+        href="/messaging/templates/generic-template"
         title="Generic Template"
         description="Understand how to create and utilize Generic Templates in your messages."
     />
     <Card
-        href="/messages/media-template"
+        href="/messaging/templates/media-template"
         title="Media Template"
         description="Find out how to incorporate Media Templates into your messages."
     />
     <Card
-        href="/messages/receipt-template"
+        href="/messaging/templates/receipt-template"
         title="Receipt Template"
         description="Learn about Receipt Templates and how to use them effectively."
     />
@@ -38,11 +34,9 @@ The `@pyyupsk/messenger-webhooks` library provides several components to help yo
 
 Each message component has its own specific use case and configuration options. By using these components, you can build more interactive and engaging experiences for users interacting with your Messenger bot.
 
--   **Button**: Allows you to create interactive buttons that users can click to trigger specific actions or responses.
 -   **Button Template**: A structured template that includes one or more buttons, ideal for providing users with actionable options.
 -   **Generic Template**: A versatile template that can be used to display various types of content, such as images and text.
 -   **Media Template**: Designed for rich media content, including images, videos, and audio.
--   **Quick Replies**: Provides users with a set of predefined responses they can quickly select from, streamlining the interaction process.
 -   **Receipt Template**: Useful for sending detailed receipts or order summaries, ideal for e-commerce interactions.
 
 For more details and examples on how to use each component, please visit the linked documentation pages.
