docs: update and expand documentation
- Modified core-api.md to include a link to the Facebook Messenger API.
- Added vents.md to document event types and handling with the library.
- Updated xamples.mdx with a link to the official Facebook Messenger Platform documentation.
- Enhanced github.md with information about the Facebook Messenger Platform.
- Revised index.md to include external resources on the Messenger Platform.
- Updated meta.json to include the new vents documentation page.
- Changed primary text color in Open Graph image for improved contrast.

--- a/apps/docs/content/docs/examples.mdx
+++ b/apps/docs/content/docs/examples.mdx
@@ -5,7 +5,7 @@ description: Explore examples and usage scenarios for @pyyupsk/messenger-webhook
 
 import { File, Folder, Files } from 'fumadocs-ui/components/files';
 
-Explore practical examples of how to use the `@pyyupsk/messenger-webhooks` library. These examples illustrate common use cases and provide a starting point for building your own Messenger bots.
+Explore practical examples of how to use the `@pyyupsk/messenger-webhooks` library. These examples illustrate common use cases and provide a starting point for building your own Messenger bots. For more information on Messenger bot capabilities, refer to the [official Facebook Messenger Platform documentation](https://developers.facebook.com/docs/messenger-platform/).
 
 ## Weather Bot Example
 
