docs: update documentation and metadata for messenger-webhooks
- Added a warning in README.md and docs about unofficial status of the library
- Updated links to NPM package in various documentation files
- Converted index.md to index.mdx in docs
- Enhanced keywords in messenger-webhooks package.json for better discoverability

--- a/apps/docs/content/docs/examples.mdx
+++ b/apps/docs/content/docs/examples.mdx
@@ -5,11 +5,11 @@ description: Explore examples and usage scenarios for @pyyupsk/messenger-webhook
 
 import { File, Folder, Files } from 'fumadocs-ui/components/files';
 
-Explore practical examples of how to use the `@pyyupsk/messenger-webhooks` library. These examples illustrate common use cases and provide a starting point for building your own Messenger bots. For more information on Messenger bot capabilities, refer to the [official Facebook Messenger Platform documentation](https://developers.facebook.com/docs/messenger-platform/).
+Explore practical examples of how to use the [`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messenger-webhooks) library. These examples illustrate common use cases and provide a starting point for building your own Messenger bots. For more information on Messenger bot capabilities, refer to the [official Facebook Messenger Platform documentation](https://developers.facebook.com/docs/messenger-platform/).
 
 ## Weather Bot Example
 
-The Weather Bot example demonstrates how to create a simple bot that responds with weather information for a specified city. This example uses the `@pyyupsk/messenger-webhooks` library to interact with the Messenger Platform.
+The Weather Bot example demonstrates how to create a simple bot that responds with weather information for a specified city. This example uses the [`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messenger-webhooks) library to interact with the Messenger Platform.
 
 ### Project Structure
 
