--- a/apps/docs/content/docs/index.mdx
+++ b/apps/docs/content/docs/index.mdx
@@ -3,9 +3,15 @@ title: Introduction
 description: Build Facebook Messenger bots easily with "@pyyupsk/messenger-webhooks" for Node.js.
 ---
 
+import { Callout } from 'fumadocs-ui/components/callout';
+
 ## Overview
 
-The `@pyyupsk/messenger-webhooks` library is designed to simplify the process of building Facebook Messenger bots using webhooks. This library provides an easy-to-use interface for handling Messenger events and sending messages back to users, streamlining the interaction with the Messenger Platform API.
+<Callout title="Warning" type="warn">
+    This is not an official library of Facebook. Use at your own risk.
+</Callout>
+
+The [`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messenger-webhooks) library is designed to simplify the process of building Facebook Messenger bots using webhooks. This library provides an easy-to-use interface for handling Messenger events and sending messages back to users, streamlining the interaction with the Messenger Platform API.
 
 ### Key Features
 
@@ -18,7 +24,7 @@ The `@pyyupsk/messenger-webhooks` library is designed to simplify the process of
 
 ## Getting Started
 
-To get started with `@pyyupsk/messenger-webhooks`, follow these steps:
+To get started with [`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messenger-webhooks), follow these steps:
 
 1. **Set Up Facebook Page and App**: Ensure you have a Facebook Page and a Facebook App configured for Messenger.
 2. **Obtain Tokens**: Acquire the necessary tokens, including the Access Token and Verify Token, from Facebook.
@@ -27,7 +33,7 @@ To get started with `@pyyupsk/messenger-webhooks`, follow these steps:
 
 ## Installation
 
-You can install the `@pyyupsk/messenger-webhooks` library via npm:
+You can install the [`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messenger-webhooks) library via npm:
 
 ```bash title="Terminal"
 npm install @pyyupsk/messenger-webhooks
