--- a/apps/docs/content/docs/messaging/buttons/index.mdx
+++ b/apps/docs/content/docs/messaging/buttons/index.mdx
@@ -5,7 +5,7 @@ description: Learn how to add URL, Postback, and Call buttons to your Messenger 
 
 import { Card, Cards } from 'fumadocs-ui/components/card';
 
-Buttons are a crucial part of the user interaction experience in Messenger bots. They allow users to take actions such as navigating to a webpage, triggering server events, or making phone calls. In the `@pyyupsk/messenger-webhooks` library, you can create three main types of buttons: URL buttons, Postback buttons, and Call buttons.
+Buttons are a crucial part of the user interaction experience in Messenger bots. They allow users to take actions such as navigating to a webpage, triggering server events, or making phone calls. In the [`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messenger-webhooks) library, you can create three main types of buttons: URL buttons, Postback buttons, and Call buttons.
 
 ## Overview
 
