--- a/apps/docs/content/docs/messaging/templates/index.mdx
+++ b/apps/docs/content/docs/messaging/templates/index.mdx
@@ -5,7 +5,7 @@ description: Explore Button, Generic, Media, and Receipt Templates for Messenger
 
 import { Card, Cards } from 'fumadocs-ui/components/card';
 
-The `@pyyupsk/messenger-webhooks` library provides several components to help you construct and manage different types of messages for your Facebook Messenger bot. These components are designed to make it easier to interact with users through various message formats, enhancing the overall user experience.
+The [`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messenger-webhooks) library provides several components to help you construct and manage different types of messages for your Facebook Messenger bot. These components are designed to make it easier to interact with users through various message formats, enhancing the overall user experience.
 
 <Cards>
     <Card
