chore: update documentation and config files
- Modify .changeset/README.md for clarity.
- Add .markdownlint.json for Markdown linting.
- Update .prettierrc.json with new formatting options.
- Revise multiple documentation files for consistency.

--- a/apps/docs/content/docs/examples.mdx
+++ b/apps/docs/content/docs/examples.mdx
@@ -1,15 +1,24 @@
 ---
 title: Examples
-description: Explore examples and usage scenarios for @pyyupsk/messenger-webhooks.
+description:
+  Explore examples and usage scenarios for @pyyupsk/messenger-webhooks.
 ---
 
 import { File, Folder, Files } from 'fumadocs-ui/components/files';
 
-Explore practical examples of how to use the [`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messenger-webhooks) library. These examples illustrate common use cases and provide a starting point for building your own Messenger bots. For more information on Messenger bot capabilities, refer to the [official Facebook Messenger Platform documentation](https://developers.facebook.com/docs/messenger-platform/).
+Explore practical examples of how to use the
+[`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messenger-webhooks)
+library. These examples illustrate common use cases and provide a starting point
+for building your own Messenger bots. For more information on Messenger bot
+capabilities, refer to the
+[official Facebook Messenger Platform documentation](https://developers.facebook.com/docs/messenger-platform/).
 
 ## Weather Bot Example
 
-The Weather Bot example demonstrates how to create a simple bot that responds with weather information for a specified city. This example uses the [`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messenger-webhooks) library to interact with the Messenger Platform.
+The Weather Bot example demonstrates how to create a simple bot that responds
+with weather information for a specified city. This example uses the
+[`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messenger-webhooks)
+library to interact with the Messenger Platform.
 
 ### Project Structure
 
@@ -56,7 +65,8 @@ Follow these steps to set up and run the Weather Bot example:
    VERIFY_TOKEN=your_webhook_verify_token
    ```
 
-   Replace `your_facebook_page_access_token` and `your_webhook_verify_token` with your actual Facebook Page Access Token and Webhook Verify Token.
+   Replace `your_facebook_page_access_token` and `your_webhook_verify_token`
+   with your actual Facebook Page Access Token and Webhook Verify Token.
 
 5. **Build the Project**:
 
@@ -85,14 +95,18 @@ To run the bot in development mode with hot reloading:
 npm run dev
 ```
 
-This command starts the bot with hot reloading enabled, allowing you to make changes to the code and see the updates in real-time without restarting the bot.
+This command starts the bot with hot reloading enabled, allowing you to make
+changes to the code and see the updates in real-time without restarting the bot.
 
 ### Additional Information
 
-- **`index.ts`**: The entry point for the bot application, which sets up the bot and handles incoming messages.
-- **`weatherService.ts`**: Contains the logic for fetching weather information and formatting it for the user.
+- **`index.ts`**: The entry point for the bot application, which sets up the bot
+  and handles incoming messages.
+- **`weatherService.ts`**: Contains the logic for fetching weather information
+  and formatting it for the user.
 
-For more details or to contribute to the example projects, check out the repository or create an issue if you encounter any problems.
+For more details or to contribute to the example projects, check out the
+repository or create an issue if you encounter any problems.
 
 ---
 
