--- a/apps/docs/content/docs/index.mdx
+++ b/apps/docs/content/docs/index.mdx
@@ -1,6 +1,8 @@
 ---
 title: Introduction
-description: Build Facebook Messenger bots easily with "@pyyupsk/messenger-webhooks" for Node.js.
+description:
+  Build Facebook Messenger bots easily with "@pyyupsk/messenger-webhooks" for
+  Node.js.
 ---
 
 import { Callout } from 'fumadocs-ui/components/callout';
@@ -11,29 +13,46 @@ import { Callout } from 'fumadocs-ui/components/callout';
   This is not an official library of Facebook. Use at your own risk.
 </Callout>
 
-The [`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messenger-webhooks) library is designed to simplify the process of building Facebook Messenger bots using webhooks. This library provides an easy-to-use interface for handling Messenger events and sending messages back to users, streamlining the interaction with the Messenger Platform API.
+The
+[`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messenger-webhooks)
+library is designed to simplify the process of building Facebook Messenger bots
+using webhooks. This library provides an easy-to-use interface for handling
+Messenger events and sending messages back to users, streamlining the
+interaction with the Messenger Platform API.
 
 ### Key Features
 
-- **Simplified Integration**: Easily integrate Facebook Messenger webhook handling into Node.js applications.
-- **Event-Driven Architecture**: Built on an event-driven architecture, making it easy to listen for and respond to various events.
-- **User-Friendly API**: Provides a convenient API for handling incoming events and sending messages.
-- **Scalable**: Designed to handle multiple events efficiently, allowing for scalable chatbot applications.
-- **TypeScript Support**: Includes type definitions for better development experience and fewer runtime errors.
-- **Open Source**: Licensed under the MIT License, allowing for free use and modification.
+- **Simplified Integration**: Easily integrate Facebook Messenger webhook
+  handling into Node.js applications.
+- **Event-Driven Architecture**: Built on an event-driven architecture, making
+  it easy to listen for and respond to various events.
+- **User-Friendly API**: Provides a convenient API for handling incoming events
+  and sending messages.
+- **Scalable**: Designed to handle multiple events efficiently, allowing for
+  scalable chatbot applications.
+- **TypeScript Support**: Includes type definitions for better development
+  experience and fewer runtime errors.
+- **Open Source**: Licensed under the MIT License, allowing for free use and
+  modification.
 
 ## Getting Started
 
-To get started with [`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messenger-webhooks), follow these steps:
+To get started with
+[`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messenger-webhooks),
+follow these steps:
 
-1. **Set Up Facebook Page and App**: Ensure you have a Facebook Page and a Facebook App configured for Messenger.
-2. **Obtain Tokens**: Acquire the necessary tokens, including the Access Token and Verify Token, from Facebook.
+1. **Set Up Facebook Page and App**: Ensure you have a Facebook Page and a
+   Facebook App configured for Messenger.
+2. **Obtain Tokens**: Acquire the necessary tokens, including the Access Token
+   and Verify Token, from Facebook.
 3. **Install the Library**: Add the library to your project using npm.
 4. **Set Up Your Server**: Configure a server to handle incoming webhook events.
 
 ## Installation
 
-You can install the [`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messenger-webhooks) library via npm:
+You can install the
+[`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messenger-webhooks)
+library via npm:
 
 ```bash title="Terminal"
 npm install @pyyupsk/messenger-webhooks
@@ -67,23 +86,32 @@ bot.start();
 
 ### Explanation
 
-1. **Create a Bot Instance**: Initialize a new `Bot` with your Access Token and Verify Token.
-2. **Set Up Event Listener**: Listen for incoming messages and define how to handle them.
-3. **Respond to Messages**: Send a response back to the user based on the message content.
+1. **Create a Bot Instance**: Initialize a new `Bot` with your Access Token and
+   Verify Token.
+2. **Set Up Event Listener**: Listen for incoming messages and define how to
+   handle them.
+3. **Respond to Messages**: Send a response back to the user based on the
+   message content.
 4. **Start the Bot**: Begin handling webhook events.
 
 ### Notes
 
-- Make sure to set up your `ACCESS_TOKEN` and `VERIFY_TOKEN` in a `.env` file or as environment variables.
-- Ensure your server is publicly accessible and correctly configured in your Facebook App settings.
+- Make sure to set up your `ACCESS_TOKEN` and `VERIFY_TOKEN` in a `.env` file or
+  as environment variables.
+- Ensure your server is publicly accessible and correctly configured in your
+  Facebook App settings.
 - Run the script to start handling Messenger events.
 
-By using this library, developers can focus on building their bot’s logic rather than managing the intricacies of the Messenger API, making bot development more efficient and manageable.
+By using this library, developers can focus on building their bot’s logic rather
+than managing the intricacies of the Messenger API, making bot development more
+efficient and manageable.
 
 ## External Resources
 
-For more detailed information about the Facebook Messenger Platform, please refer to the official Facebook Messenger Platform documentation:
+For more detailed information about the Facebook Messenger Platform, please
+refer to the official Facebook Messenger Platform documentation:
 
 [Facebook Messenger Platform Documentation](https://developers.facebook.com/docs/messenger-platform/)
 
-This external resource provides comprehensive information about the Messenger Platform's features, capabilities, and best practices for bot development.
+This external resource provides comprehensive information about the Messenger
+Platform's features, capabilities, and best practices for bot development.
