--- a/apps/docs/content/docs/messaging/buttons/index.mdx
+++ b/apps/docs/content/docs/messaging/buttons/index.mdx
@@ -1,15 +1,23 @@
 ---
 title: Buttons
-description: Learn how to add URL, Postback, and Call buttons to your Messenger bot.
+description:
+  Learn how to add URL, Postback, and Call buttons to your Messenger bot.
 ---
 
 import { Card, Cards } from 'fumadocs-ui/components/card';
 
-Buttons are a crucial part of the user interaction experience in Messenger bots. They allow users to take actions such as navigating to a webpage, triggering server events, or making phone calls. In the [`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messenger-webhooks) library, you can create three main types of buttons: URL buttons, Postback buttons, and Call buttons.
+Buttons are a crucial part of the user interaction experience in Messenger bots.
+They allow users to take actions such as navigating to a webpage, triggering
+server events, or making phone calls. In the
+[`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messenger-webhooks)
+library, you can create three main types of buttons: URL buttons, Postback
+buttons, and Call buttons.
 
 ## Overview
 
-This section covers the different types of buttons you can use in your bot messages, each serving a specific purpose. Below is a brief overview of each button type and their key features:
+This section covers the different types of buttons you can use in your bot
+messages, each serving a specific purpose. Below is a brief overview of each
+button type and their key features:
 
 <Cards>
   <Card
@@ -31,6 +39,9 @@ This section covers the different types of buttons you can use in your bot messa
 
 ## Additional Information
 
-Each button type can be customized further to fit your needs. By using these button components, you can create interactive and engaging experiences for users interacting with your Messenger bot.
+Each button type can be customized further to fit your needs. By using these
+button components, you can create interactive and engaging experiences for users
+interacting with your Messenger bot.
 
-For detailed information on each button type, refer to the specific pages linked above.
+For detailed information on each button type, refer to the specific pages linked
+above.
