--- a/apps/docs/content/docs/messaging/templates/index.mdx
+++ b/apps/docs/content/docs/messaging/templates/index.mdx
@@ -1,11 +1,18 @@
 ---
 title: Message Templates
-description: Explore Button, Generic, Media, and Receipt Templates for Messenger with @pyyupsk/messenger-webhooks.
+description:
+  Explore Button, Generic, Media, and Receipt Templates for Messenger with
+  @pyyupsk/messenger-webhooks.
 ---
 
 import { Card, Cards } from 'fumadocs-ui/components/card';
 
-The [`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messenger-webhooks) library provides several components to help you construct and manage different types of messages for your Facebook Messenger bot. These components are designed to make it easier to interact with users through various message formats, enhancing the overall user experience.
+The
+[`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messenger-webhooks)
+library provides several components to help you construct and manage different
+types of messages for your Facebook Messenger bot. These components are designed
+to make it easier to interact with users through various message formats,
+enhancing the overall user experience.
 
 <Cards>
   <Card
@@ -32,11 +39,18 @@ The [`@pyyupsk/messenger-webhooks`](https://www.npmjs.com/package/@pyyupsk/messe
 
 ## Additional Information
 
-Each message component has its own specific use case and configuration options. By using these components, you can build more interactive and engaging experiences for users interacting with your Messenger bot.
+Each message component has its own specific use case and configuration options.
+By using these components, you can build more interactive and engaging
+experiences for users interacting with your Messenger bot.
 
-- **Button Template**: A structured template that includes one or more buttons, ideal for providing users with actionable options.
-- **Generic Template**: A versatile template that can be used to display various types of content, such as images and text.
-- **Media Template**: Designed for rich media content, including images, videos, and audio.
-- **Receipt Template**: Useful for sending detailed receipts or order summaries, ideal for e-commerce interactions.
+- **Button Template**: A structured template that includes one or more buttons,
+  ideal for providing users with actionable options.
+- **Generic Template**: A versatile template that can be used to display various
+  types of content, such as images and text.
+- **Media Template**: Designed for rich media content, including images, videos,
+  and audio.
+- **Receipt Template**: Useful for sending detailed receipts or order summaries,
+  ideal for e-commerce interactions.
 
-For more details and examples on how to use each component, please visit the linked documentation pages.
+For more details and examples on how to use each component, please visit the
+linked documentation pages.
